install/bookinfo/virtual-service-reviews-test-v2.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: reviews
spec:
  hosts:
    - reviews
  http:
  - match:
    - headers:
        end-user:
          exact: jason
    route:
    - destination:
        host: reviews
        subset: v2
  - route:
    - destination:
        host: reviews
        subset: v3
    
  # - match:
  #   - headers:
  #       end-user:
  #         exact: zzj
  #   route:
  #   - destination:
  #       host: reviews
  #       subset: v1
  # - route:
  #   - destination:
  #       host: reviews
  #       subset: v1
  #     weight: 30
  #   - destination:
  #       host: reviews
  #       subset: v2
  #     weight: 40
  #   - destination:
  #       host: reviews
  #       subset: v3
  #     weight: 30
